# arbitrage_research

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
Cointegration Approach/: Multivariate Cointegration Framework (Alpha Version).ipynb  Multivariate Cointegration Framework.ipynb  Small Mean-rev Portfolio Sketchbook.ipynb  Small mean reversion portfolio - Report.ipynb  Sparse Mean-reverting Portfolio Selection.ipynb  USD.csv  USSwap.csv  US_SWAP.csv  mean_reversion.ipynb  minimum_profit_optimization.ipynb  multivariate_cointegration.ipynb  sparse_mean-reverting_portfolio_selection.ipynb  trading_simulation.py
Copula Approach/: BKD_ESC_2008_2009_June.csv  CVine_Copula_Strategy.ipynb  Copula_Notebook_Liew_etal(legacy).ipynb  Copula_Notebook_Liew_etal.ipynb  Copula_Strategy_Basic.ipynb  Copula_Strategy_Mispricing_Index.ipynb  Vine copula tests.ipynb  sp500_2016.csv  sp500_2019.csv  vine_copula_partner_selection.ipynb
Distance Approach/: basic_distance_approach.ipynb  basic_distance_approach_comparsion.ipynb  pearson_distance_approach.ipynb
Hedge Ratios/: hedge_ratios.ipynb
ML Approach/: crack_spread_modeling.ipynb  fair_value_modeling.ipynb  futures_rollover.ipynb  ml_based_pairs_selection.ipynb
Minimum Profit Condition/: Minimum Profit Optimization.ipynb
Optimal Mean Reversion/: cir_model.ipynb  heat_potentials.ipynb  ou_model.ipynb  xou_model.ipynb
Other Approaches/: kalman_filter.ipynb  pca_approach.ipynb  quantile_time_series.ipynb
Sample-Data/: KO.csv  PEP.csv  S&P 500_Components.csv  assetalloc.csv  logReturns.csv  sp_500_500.csv
(+462 files in other folders)
